fixed text contrast in landing page

--- a/src/components/LandingPage.module.scss
+++ b/src/components/LandingPage.module.scss
@@ -35,7 +35,7 @@
         font-family: $font-roboto;
         font-weight: 300;
         font-size: 3.5rem;
-        color: rgba($color-white, 0.8);
+        color: $color-white;
 
         &:not(:last-child) {
             margin-bottom: 3rem;
